--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Title</title>
 </head>
 <body>
-<a href="{% url 'add_plant' %}">Add Plant</a>
+<h1>
+  Logout
+</h1>
 </body>
 </html>
