--- a/templates/add_plant.html
+++ b/templates/add_plant.html
@@ -5,7 +5,7 @@
     <title>Add Plant</title>
 </head>
 <body>
-    <form action = "{% url 'add_plant' %}" method = 'POST'>
+    <form action="{% url 'add_plant' %}" method='POST' enctype='multipart/form-data'>
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Add Plant</button>
