--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load custom_tags %}
 {% load static %}
 {% block content %}
 <h1>
@@ -11,31 +10,35 @@
     {% for plant in plants %}
     <div class="plant-div">
         <h2>{{plant.name}}</h2>
-        <div>
+        <div class="chart-container">
         <canvas id="myChart{{plant.id}}"></canvas>
             <script>
-    var ctx = document.getElementById('myChart{{plant.id}}').getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels:{{ data|get_item:plant.name+'.date_time'|safe }},
-            datasets: [{
-                label: 'Moisture',
-                data: {{ data|get_item:plant.name.m_moist|safe }},
-                backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                borderColor: 'rgba(255, 99, 132, 1)',
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
-                }
+var data = JSON.parse('{{ data | safe }}');
+var ctx = document.getElementById('myChart{{plant.id}}').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'line',
+    data: {
+        labels: data['{{ plant.name }}'].date_time,
+        datasets: [{
+            label: 'Moisture',
+            data: data['{{ plant.name }}'].m_moist,
+            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+            borderColor: 'rgba(255, 99, 132, 1)',
+            borderWidth: 1
+        }]
+    },
+    options: {
+    responsive: false,
+    maintainAspectRatio: false,
+
+        scales: {
+            y: {
+                beginAtZero: true
             }
         }
-    });
-        </script>
+    }
+});
+</script>
         </div>
     </div>
     {% endfor %}
