--- a/PlantFeeder/static/css/style.css
+++ b/PlantFeeder/static/css/style.css
@@ -230,3 +230,12 @@ border:1px solid blue;
     width: 100%;
     height: 400px; /* Or whatever height you want */
 }
+
+.logo {
+    background-image: url({{ profile.logo.url }});
+    background-size: cover; /* this will scale the image to the size of the div */
+    height: 100px; /* adjust this to the height you want */
+    width: 100px; /* adjust this to the width you want */
+    display: inline-block;
+}
+
