--- a/static_files/css/style.css
+++ b/static_files/css/style.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #FFF8F1;
+    background-color: #252323;
     color: #fff;
     padding: .25em;
 }
@@ -180,3 +180,62 @@ width:280px;
 .like {
 width:20px;
 }
+
+/* HomePage CSS */
+/* styles.css */
+h1 {
+  color: #333;
+  font-size: 24px;
+  text-align: center;
+}
+
+h4 {
+  color: #666;
+  font-size: 16px;
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: auto;
+}
+
+body {
+  background-color: #f0f0f0;
+}
+
+.img_div {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.plant-row {
+display: flex;
+padding: 20px;
+justify-content: space-around;
+}
+
+.plant-div{
+flex: 1 0 30%;
+margin:10px;
+padding:10px;
+border:1px solid blue;
+}
+
+/* New CSS rule for the chart */
+.chart-container {
+    width: 100%;
+    height: 400px; /* Or whatever height you want */
+}
+
+.logo {
+    background-image: url({{ profile.logo.url }});
+    background-size: cover; /* this will scale the image to the size of the div */
+    height: 100px; /* adjust this to the height you want */
+    width: 100px; /* adjust this to the width you want */
+    display: inline-block;
+}
+
