--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>Beans Blog</title>
 <!-- Bootstrap CSS -->
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Add this line -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 
 <!-- Bootstrap Bundle with Popper JS -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
 </head>
 <body style="background-color:#252323;font-family:Varela Round;" text="#BB7D3C">
 {% include 'partials/navbar.html' %}
@@ -18,5 +21,7 @@
 
 {% endblock %}
 {% include 'partials/footer.html' %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
