--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -1,8 +1,15 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
 <body>
-<div class="container mt-5"><h1 class="text-center mb-5"> Plant Home </h1>
-    <div class="row row-cols-1 row-cols-md-3 g-4"> {% if data %} {% for plant in plants %}
-        <div class="col">
+    <div class="container mt-5">
+        <h1 class="text-center mb-5"> Plant Home </h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            {% if data %}
+                {% for plant in plants %}
+                    <!-- Your plant card structure here. -->
+            <div class="col">
             <div class="card h-100">
                 <div class="card-header"><h2 class="card-title">{{plant.name}}</h2></div>
                 <div class="card-body">
@@ -11,74 +18,46 @@
                     </div>
 <!--                    <a href="{% url 'reg_index_pop_up' plant.id %}">More Info</a>-->
                         <a class="nav-link" href="javascript:{document.querySelector('#more_info').submit()}">More Info</a>
+                        <h1>{{plant.id}}</h1>
                         <form id="more_info" action="{% url 'reg_index_pop_up' plant.id %}" method="post">
                             {% csrf_token %}
                             <input type="hidden">
                         </form>
 
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal{{plant.id}}">More Info</button>
+<!--                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal{{plant.id}}">More Info</button>-->
+
 
 
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="exampleModal{{plant.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">{{plant.name}}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>EC: {{plant.ec}}</p>
-                <p>pH: {{plant.ph}}</p>
-                <p>NPK: {{plant.npk}}</p>
-                <p>Temperature: {{plant.temperature}}</p>
-                <p>Ideal Moisture: {{plant.ideal_moisture}}</p>
-                <p>Fertilizer: {{plant.fertilizer}}</p>
-                <div class="chart-container">
-                    <canvas id="detailChart{{plant.id}}"></canvas>
-                </div>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal11">Edit</button>
+                {% endfor %}
+            {% endif %}
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<script>
+            {% if detail_data %}
+                {% for p_field in p_fields %}
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-header"><h2 class="card-title">{{p_field.name}}</h2><h2 class="card-title">{{p_field}}</h2></div>
+                            <div class="card-body">
+                                <div class="chart-container">
+                                    <canvas id="myChartField{{forloop.counter}}"></canvas>
+                                </div>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#secondModalExample{{forloop.counter}}">More Info</button>
+                            </div>
+                        </div>
+                    </div>
 
-            var data = JSON.parse('{{ data | safe }}');
-            var ctx = document.getElementById('myChart{{plant.id}}').getContext('2d');
-            var myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: data['{{ plant.name }}'].date_time,
-                    datasets: [{
-                        label: 'Moisture',
-                        data: data['{{ plant.name }}'].m_moist,
-                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                        borderColor: 'rgba(255, 99, 132, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-        </script>
-        {% endfor %}
-        {% endif %}
-            <div class="row row-cols-1 row-cols-md-3 g-4"> {% if detail_data %} {% for p_field in p_fields %}
-        <div class="col">
+                    <div class="modal fade" id="secondModalExample{{forloop.counter}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-xl">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">{{p_field.name}}</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <!-- Your p_field detail data here. -->
+                                            <div class="col">
             <div class="card h-100">
                 <div class="card-header"><h2 class="card-title">{{plant.name}}</h2></div>
                 <div class="card-body">
@@ -89,84 +68,52 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="exampleModal{{plant.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">{{plant.name}}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p>EC: {{plant.ec}}</p>
-                <p>pH: {{plant.ph}}</p>
-                <p>NPK: {{plant.npk}}</p>
-                <p>Temperature: {{plant.temperature}}</p>
-                <p>Ideal Moisture: {{plant.ideal_moisture}}</p>
-                <p>Fertilizer: {{plant.fertilizer}}</p>
-                <div class="chart-container">
-                    <canvas id="detailChart{{plant.id}}"></canvas>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <script>
+                        var data = JSON.parse('{{ detail_data | safe }}');
+                        var dt_data = JSON.parse('{{ f_time | safe }}');
+                        var ctx = document.getElementById('myChartField{{forloop.counter}}').getContext('2d');
+                        console.log(data['{{ p_field }}'])
+                        console.log(dt_data[0]['hour'])
+                        var myChart = new Chart(ctx, {
+                            type: 'line',
+                            data: {
+                                labels: '{{hours}}',
+                                datasets: [{
+                                    label: '{{p_field}}',
+                                    data: data['{{ p_field }}'],
+                                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                                    borderColor: 'rgba(255, 99, 132, 1)',
+                                    borderWidth: 1
+                                }]
+                            },
+                            options: {
+                                responsive: true,
+                                maintainAspectRatio: false,
+                                scales: {
+                                    y: {
+                                        beginAtZero: true
+                                    }
+                                }
+                            }
+                        });
+                    </script>
+                {% endfor %}
+            {% else %}
+                <div class="col">
+                    <div class="alert alert-warning" role="alert"> No data available!</div>
                 </div>
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
+            {% endif %}
         </div>
     </div>
-</div>
-<script>
-            var data = JSON.parse('{{ detail_data | safe }}');
-            var dt_data = JSON.parse('{{ f_time | safe }}');
-            var ctx = document.getElementById('myChart{{forloop.counter}}').getContext('2d');
-            console.log(data['{{ p_field }}'])
-            console.log(dt_data[0]['hour'])
-            var myChart = new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: '{{hours}}',
-                    datasets: [{
-                        label: '{{p_field}}',
-                        data: data['{{ p_field }}'],
-                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                        borderColor: 'rgba(255, 99, 132, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-        </script>
-                <div class="modal fade" id="exampleModal11" tabindex="-1" aria-labelledby="exampleModalLabel11" aria-hidden="true">
-    <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel11">{{plant.name}}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form action="{% url 'edit_plant' plant.id %}" method="post">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                </form>
 
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        {% endfor %} {% else %}
-        <div class="col">
-            <div class="alert alert-warning" role="alert"> No data available!</div>
-        </div>
-        {% endif %}
-    </div>
-    </div>
     <div class="mt-4"><a href="{% url 'add_plant' %}" class="btn btn-primary">Add Plant</a></div>
-</div>
-</body>  {% endblock %}
+</body>
+{% endblock %}
