--- a/templates/Core/reg_home.html
+++ b/templates/Core/reg_home.html
@@ -79,8 +79,12 @@
 function toHours(timestamp) {
     var date = new Date(timestamp);
     var hours = date.getHours();
-    var minutes = "0" + date.getMinutes();
-    var formattedTime = hours + ':' + minutes.substr(-2);
+    var remaining_hours = 23 - hours;
+    var remaining_minutes = 60 - date.getMinutes();
+    if (remaining_minutes === 60){
+    remaining_hours += 1;
+     remaining_minutes = 0;}
+    var formattedTime = '-' + remaining_hours + ':' + remaining_minutes;
     return formattedTime;
 }
 // Converts a timestamp to day
@@ -103,7 +107,7 @@ function getDay(timestamp) {
             data: {
                 labels: data_x.map(toHours), // x-values (timestamps)
                 datasets: [{
-                    label: `${label}-(${dayOfLastEntry})`,
+                    label: `${label} (${dayOfLastEntry})`,
                     data: dataset, // y-values (moisture)
                     backgroundColor: 'rgba(255, 99, 132, 0.2)',
                     borderColor: 'rgba(255, 99, 132, 1)',
